--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -4409,6 +4409,7 @@ input[type="button"].btn-block {
   background-clip: border-box;
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.25rem;
+  margin-top: 30px;
 }
 
 .card > hr {
